# Trading_Bot_App

./: .gitignore  CHANGELOG.md  CONFIGURATION.md  DEPLOYMENT.md  Dockerfile  MANIFEST.in  README.md  RELEASE_PROCESS.md  calendar_spreads.csv  config.example.json  config.json  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci-cd.yml
notebooks/: calendar_spreads.csv  config.json  optionsTrader.ipynb
src/: __init__.py  api_client.py  earnings_getter.py  option_finder.py  run.py  ticker_filter.py  ticker_getter.py  trade_finder.py  trader.py  utils.py
src/trading_bot/: __init__.py  circuit_breaker.py  earnings_getter.py  logging_config.py  monitoring.py  option_finder.py  ticker_filter.py  trader.py  utils.py  web_interface.py
src/trading_bot/templates/: index.html
tests/: conftest.py  test_trader.py
