[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading_bot"
version = "0.1.0"
description = "A trading bot for options trading"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "alpaca-trade-api>=2.3.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "pytz>=2021.1",
    "yfinance>=0.1.70",
    "scipy>=1.7.0",
    "requests>=2.26.0",
    "psutil>=5.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
    "pytest-cov>=2.12.1",
    "pytest-mock>=3.6.1",
    "black>=21.7b0",
    "flake8>=3.9.2",
    "mypy>=0.910",
]

[tool.setuptools]
packages = ["trading_bot"]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true 